--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
                     </li>
                   </ul>
                 </div>
-                <a href="#none" class="career-btn">이력 더보기</a>
+                <a href="pdf/한국특허정보원기획서.pdf" class="career-btn">이력 더보기</a>
               </div>
             </div>
           </div>
