--- a/index.html
+++ b/index.html
@@ -9,13 +9,12 @@
 <body>
   <!-- Intro -->
   <header class="intro">
-    <div id="sideLeft" class="side left"></div>
-    <div id="sideRight" class="side right"></div>
-    <div id="introText" class="intro-text-wrap">
-      <h1>Front End</h1>
-      <p>PORTFOLIO</p>
-      <h2>프론트엔드 개발자 <strong>문현아</strong>입니다.</h2>
+    <div class="text-wrap">
+      <p>성장을 즐기는</p>
+      <p>프론트엔드 개발자</p>
+      <p><span>문현아</span> 입니다.</p>
     </div>
+    <i class="fa-solid fa-arrow-down"></i>
   </header>
   <main>
     <!-- Nav -->
