--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
             </div>
             <div class="input-items">
               <div class="input-item">
-                <input type="checkbox" id="html5" value="html5" class="checkItem"><label for="html5">HTML5</label>
+                <input type="checkbox" id="html5" value="html5" class="checkItem" checked><label for="html5">HTML5</label>
               </div>
               <div class="input-item">
                 <input type="checkbox" id="css" value="css" class="checkItem"><label for="css">CSS</label>
